--- a/static/css/login_style.css
+++ b/static/css/login_style.css
@@ -252,3 +252,20 @@
 .login-box .radio-button input[type="radio"]:checked + .radio::before {
   opacity: 1;
 }
+
+input[type="submit"] {
+  width: 100%;
+  background-color: #333;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #ccc;
+  color: black;
+}
+
