--- a/templates/login.html
+++ b/templates/login.html
@@ -9,38 +9,33 @@
 <body>
   <div class="login-box">
     <p>学生公寓管理系统</p>
-    <form>
+    <form action="/" method="post">
       <div class="user-box">
-        <input required="" name="" type="text">
-        <label>用户名</label>
+        <input required="" id="ID" name="ID" type="text">
+        <label for="ID">用户名</label>
       </div>
       <div class="user-box">
-        <input required="" name="" type="password">
+        <input required="" id="password" name="password" type="password">
         <label>密码</label>
       </div>
       <div class="bottom-block">
-        <div class="block-left">
-          <!-- 判断是否能登录后 做个跳转操作 -->
-          <a href="#">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <p>登录</p>
-          </a>
-        </div>
-        <!-- 选择学生还是老师的按钮 -->
+      <!-- 选择学生还是老师的按钮 -->
         <label class="radio-button">
-          <input value="option1" name="example-radio" type="radio">
+          <input value='学生' name="identity" type="radio" required>
           <span class="radio"></span>
           学生
         </label>
 
         <label class="radio-button">
-          <input value="option2" name="example-radio" type="radio">
+          <input value='管理员' name="identity" type="radio" required>
           <span class="radio"></span>
           管理员
         </label>
+
+        <div class="block-left">
+          <!-- 判断是否能登录后 做个跳转操作 -->
+           <input value="提交" type="submit">
+        </div>
       </div>
 
 
