finish student_change

--- a/templates/maintenance_request.html
+++ b/templates/maintenance_request.html
@@ -15,8 +15,8 @@
   </div>
   <form>
     <div class="form-group">
-      <label for="cell-phone-number">联系电话:</label>
-      <input required="" name="cell-phone-number" id="cell-phone-number" type="text">
+      <label for="cell_phone_number">联系电话:</label>
+      <input required="" name="cell_phone_number" id="cell_phone_number" type="text">
     </div>
     <div class="form-group">
       <label for="area">维修区域:</label>
