--- a/templates/student_change.html
+++ b/templates/student_change.html
@@ -13,10 +13,10 @@
   <div class="card-header">
     <div class="log">修改档案</div>
   </div>
-  <form>
+  <form action="/student_change" method="post" enctype="multipart/form-data">
     <div class="form-group">
-      <label for="cell-phone-number">手机号:</label>
-      <input value="" required="" name="cell-phone-number" id="cell-phone-number" type="text">
+      <label for="cell_phone_number">手机号:</label>
+      <input value="" required="" name="cell_phone_number" id="cell_phone_number" type="text">
     </div>
     <div class="form-group">
       <label for="email">邮箱:</label>
