finish maintenance show

--- a/templates/maintenance_show.html
+++ b/templates/maintenance_show.html
@@ -18,7 +18,7 @@
               <!-- content应该为‘日期 申请人 维修区域 状态’ -->
               <span class="pull_left">{{ record.content }}</span>
               <!-- 链接地址 -->
-              <a href="/records/{{record.address}}">查看</a>
+              <a href="/maintenance_detail/{{record.address}}">查看</a>
             </li>
 
         {% endfor %}
