finish maintenance detail

--- a/templates/administrator_home.html
+++ b/templates/administrator_home.html
@@ -33,7 +33,7 @@
         </a>
     </div>
     <div class="list">
-        <a href="#">
+        <a href="/maintenance_show">
         <button>
             <!-- 是否可以增加一个标志来显示是否有新增维修请求？ -->
             <span>查看维修记录</span>
