add changes to html

--- a/templates/IO_school_manage.html
+++ b/templates/IO_school_manage.html
@@ -21,7 +21,7 @@
     <div class="card-header">
         <div class="log">入住登记</div>
     </div>
-    <form>
+    <form action="In_school" method="post" name="In">
         <div class="form-group">
           <label for="ID">ID号:</label>
           <input required="" name="ID" id="ID" type="text">
@@ -70,12 +70,12 @@
     </form>
   </div>
 </div>
-<div class="data_block" , id="div2">
+<div class="Out_school" , id="div2">
   <div class="login-card">
     <div class="card-header">
         <div class="log">离宿登记</div>
     </div>
-    <form>
+    <form action="/Out_school" method="post" name="Out">
         <div class="form-group">
           <label for="ID_out">ID号:</label>
           <input required="" name="ID_out" id="ID_out" type="text">
