--- a/templates/LR_school_manage.html
+++ b/templates/LR_school_manage.html
@@ -24,7 +24,7 @@
               <!-- content应该为‘日期 申请人’ -->
               <span class="pull_left">{{ record.content }}</span>
               <!-- 链接地址 -->
-              <a href="/records/{{record.address}}">查看</a>
+              <a href="/leave_school_detail/{{record.address}}">查看</a>
             </li>
 
         {% endfor %}
@@ -38,7 +38,7 @@
               <!-- content应该为‘日期 申请人’ -->
               <span class="pull_left">{{ record.content }}</span>
               <!-- 链接地址 -->
-              <a href="/records/{{record.address}}">查看</a>
+              <a href="/return_school_detail/{{record.address}}">查看</a>
             </li>
 
         {% endfor %}
