--- a/templates/guest_detail.html
+++ b/templates/guest_detail.html
@@ -50,9 +50,8 @@
             <span>5.21</span>
         </li>
     </ul>
-    <div class="bottom-list">
-    <!-- 按钮按了之后操作待做 -->
-    <button>修改</button>
-    </div>
+    <!-- 怎么传入我要修改的哪个学生呢？ -->
+    <form action="/guest_change/{{index}}" class="bottom-list">
+    <button>修改</button></form>
 </div>
 {% endblock %}
