--- a/templates/guest_register.html
+++ b/templates/guest_register.html
@@ -13,7 +13,7 @@
   <div class="card-header">
     <div class="log">登记访客</div>
   </div>
-  <form>
+  <form action="#" method="post">
     <div class="form-group">
       <label for="ID_card">身份证:</label>
       <input required="" name="ID_card" id="ID_card" type="text">
