--- a/templates/return_school_apply.html
+++ b/templates/return_school_apply.html
@@ -11,9 +11,9 @@
 {% block body%}
 <div class="login-card">
   <div class="card-header">
-    <div class="log">离校申请</div>
+    <div class="log">返校申请</div>
   </div>
-  <form>
+  <form action="#" method="post">
     <!-- 需要日期吗？ -->
     <div class="form-group">
       <label for="description">返校理由(不多于50字):</label>
