--- a/templates/return_school_detail.html
+++ b/templates/return_school_detail.html
@@ -34,11 +34,10 @@
             <span>等待审批</span>
         </li>
     </ul>
-    <div class="bottom-list">
-    <!-- 按钮按了之后操作待做 -->
-    <!-- 如果已经审批 是否要取消显示按钮？ -->
-    <button>通过</button>
-    <button>不通过</button>
-    </div>
+
+    <form action="/agree_return_school/{{index}}" class="bottom-list" method="post">
+    <button>通过</button></form>
+    <form action="/disagree_return_school/{{index}}" class="bottom-list" method="post">
+    <button>不通过</button></form>
 </div>
 {% endblock %}
