--- a/templates/room_change.html
+++ b/templates/room_change.html
@@ -14,7 +14,7 @@
   <div class="card-header">
     <div class="log">修改宿舍信息</div>
   </div>
-  <form>
+  <form action="#" method="post">
     <div class="form-group">
       <label for="housemaster">社长:</label>
       <input value="" required="" name="housemaster" id="housemaster" type="text">
