--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -42,9 +42,9 @@
             <span>正常</span>
         </li>
     </ul>
-    <div class="bottom-list">
+    <form class="bottom-list" action="/room_change/{{index}}">
     <!-- 按钮按了之后操作待做 -->
     <button>修改</button>
-    </div>
+    </form>
 </div>
 {% endblock %}
