--- a/templates/room_show.html
+++ b/templates/room_show.html
@@ -18,7 +18,7 @@
               <!-- content应该为‘宿舍号 社长 维修状态 已住人数’ -->
               <span class="pull_left">{{ record.content }}</span>
               <!-- 链接地址 -->
-              <a href="/records/{{record.address}}">查看</a>
+              <a href="/room_detail/{{record.address}}">查看</a>
             </li>
 
         {% endfor %}
