--- a/templates/student_show.html
+++ b/templates/student_show.html
@@ -19,7 +19,7 @@
               <!-- 筛选要做吗？ -->
               <span class="pull_left">{{ record.content }}</span>
               <!-- 链接地址 跳转至学生的详情界面 -->
-              <a href="/records/{{record.address}}">查看详情</a>
+              <a href="/admin_change_student/{{record.address}}">查看详情</a>
             </li>
 
         {% endfor %}
