--- a/templates/admin_change_student.html
+++ b/templates/admin_change_student.html
@@ -13,18 +13,23 @@
   <div class="card-header">
     <div class="log">修改档案</div>
   </div>
-  <form method="post">
+  <form method="post" action="#">
     <div class="form-group">
-      <label for="cell_phone_number">手机号:</label>
-      <input value="" required="" name="cell_phone_number" id="cell_phone_number" type="text">
+      <label for="class">班级:</label>
+      <input value="" required="" name="class" id="class" type="text">
     </div>
     <div class="form-group">
-      <label for="password">密码:</label>
-      <input value="" required="" name="password" id="password" type="text">
+      <label for="apartment">公寓:</label>
+      <input value="" required="" name="apartment" id="apartment" type="text">
     </div>
     <div class="form-group">
-      <label for="head">头像:</label>
-      <input value="" required="" name="head" id="head" type="file">
+      <label for="room">宿舍:</label>
+      <input value="" required="" name="room" id="room" type="text">
+    </div>
+<!--  改成下拉菜单？  -->
+    <div class="form-group">
+      <label for="state">状态:</label>
+      <input value="" required="" name="state" id="state" type="text">
     </div>
     <div class="form-group">
       <input value="提交" type="submit">
