--- a/templates/administrator_file.html
+++ b/templates/administrator_file.html
@@ -12,7 +12,7 @@
 {% block body%}
 <div class="data_block">
     <ul class="list_group">
-        <li class="list_group left">我的档案</li>
+        <li class="list_group left">管理员档案</li>
         <li class="list_group center">
             <img src="/static/image/head.jpg" alt="暂无图片" width="150" height="200">
         </li>
