--- a/templates/administrator_home.html
+++ b/templates/administrator_home.html
@@ -11,22 +11,22 @@
 {% block body%}
 <div class="button-list">
     <div class="list">
-        <a href="#">
+        <a href="/IO_school_manage">
             <button>
             <span>入住/离宿登记</span>
             </button>
         </a>
-        <a href="#">
+        <a href="/LR_school_manage">
         <button>
             <span>暂离/返校登记</span>
         </button>
         </a>
-        <a href="#">
+        <a href="/administrator_change">
         <button>
             <span>修改自身档案</span>
         </button>
         </a>
-        <a href="#">
+        <a href="/student_show">
         <button>
             <span>查看/修改学生档案</span>
         </button>
@@ -39,17 +39,17 @@
             <span>查看维修记录</span>
         </button>
         </a>
-        <a href="#">
+        <a href="/guest_show">
             <button>
             <span>登记/修改访客</span>
             </button>
         </a>
-        <a href="#">
+        <a href="/room_show">
         <button>
             <span>查看/修改宿舍信息</span>
         </button>
         </a>
-        <a href="#">
+        <a href="/administrator_file">
         <button>
             <span>查看自身信息</span>
         </button>
