--- a/templates/guest_change.html
+++ b/templates/guest_change.html
@@ -14,7 +14,7 @@
   <div class="card-header">
     <div class="log">修改访客</div>
   </div>
-  <form>
+  <form action="#" method="post">
     <div class="form-group">
       <label for="ID_card">身份证:</label>
       <input value="" required="" name="ID_card" id="ID_card" type="text">
