--- a/templates/maintenance_request.html
+++ b/templates/maintenance_request.html
@@ -13,7 +13,7 @@
   <div class="card-header">
     <div class="log">维修申请</div>
   </div>
-  <form action="/maintenance_request" method="post" enctype="multipart/form-data">
+  <form action="#" method="post" enctype="multipart/form-data">
     <div class="form-group">
       <label for="cell_phone_number">联系电话:</label>
       <input required="" name="cell_phone_number" id="cell_phone_number" type="text">
