complete the pages of student

--- a/templates/Leave_school_apply.html
+++ b/templates/Leave_school_apply.html
@@ -16,12 +16,12 @@
   <form>
     <!-- 需要日期吗？ -->
     <div class="form-group">
-      <label for="cell-phone-number">紧急联系人:</label>
-      <input required="" name="cell-phone-number" id="cell-phone-number" type="text">
+      <label for="departure_time">预期离开时间:</label>
+      <input required="" name="departure_time" id="departure_time" type="text">
     </div>
     <div class="form-group">
-      <label for="area">紧急联系电话:</label>
-      <input required="" name="area" id="area" type="text">
+      <label for="destination">目的地:</label>
+      <input required="" name="destination" id="destination" type="text">
     </div>
     <div class="form-group">
       <label for="description">离校理由(不多于50字):</label>
