--- a/templates/return_school_apply.html
+++ b/templates/return_school_apply.html
@@ -16,6 +16,10 @@
   <form action="#" method="post">
     <!-- 需要日期吗？ -->
     <div class="form-group">
+      <label for="return_time">预期返回时间:</label>
+      <input required="" name="return_time" id="return_time" type="text">
+    </div>
+    <div class="form-group">
       <label for="description">返校理由(不多于50字):</label>
       <textarea class="description" rows="5" maxlength="50" required="" name="description" id="description"></textarea>
     </div>
