学生界面基本完成并测试通过，请大伙先同步到这个状态再接着创作

--- a/templates/Leave_school_apply.html
+++ b/templates/Leave_school_apply.html
@@ -13,11 +13,15 @@
   <div class="card-header">
     <div class="log">离校申请</div>
   </div>
-  <form>
+  <form action="#" method="post">
     <!-- 需要日期吗？ -->
     <div class="form-group">
       <label for="departure_time">预期离开时间:</label>
       <input required="" name="departure_time" id="departure_time" type="text">
+    </div>
+    <div class="form-group">
+      <label for="return_time">预期返回时间:</label>
+      <input required="" name="return_time" id="return_time" type="text">
     </div>
     <div class="form-group">
       <label for="destination">目的地:</label>
