--- a/static/css/student_change_style.css
+++ b/static/css/student_change_style.css
@@ -28,7 +28,7 @@ label {
   margin-bottom: 5px;
 }
 
-input[type="text"], input[type="email"], input[type="password"] {
+input[type="text"], input[type="email"] {
   width: 100%;
   padding: 12px 20px;
   font-size: 16px;
