--- a/static/css/student_change_style.css
+++ b/static/css/student_change_style.css
@@ -27,8 +27,7 @@ label {
   font-size: 18px;
   margin-bottom: 5px;
 }
-
-input[type="text"], input[type="email"] {
+input[type="text"], input[type="email"], input[type="password"]{
   width: 100%;
   padding: 12px 20px;
   font-size: 16px;
