新增了暂离类、返校类和访客类。修改申请详情界面与数据库一致

--- a/templates/IO_school_manage.html
+++ b/templates/IO_school_manage.html
@@ -40,6 +40,10 @@
           <input required="" name="born" id="born" type="date">
         </div>
         <div class="form-group">
+          <label for="domicile">户籍:</label>
+          <input required="" name="domicile" id="domicile" type="text">
+        </div>
+        <div class="form-group">
           <label for="class">班级:</label>
           <input required="" name="class" id="class" type="text">
         </div>
