--- a/templates/administrator_change.html
+++ b/templates/administrator_change.html
@@ -13,7 +13,7 @@
   <div class="card-header">
     <div class="log">修改档案</div>
   </div>
-  <form method="post">
+  <form method="post" action="#">
     <div class="form-group">
       <label for="cell_phone_number">手机号:</label>
       <input value="" required="" name="cell_phone_number" id="cell_phone_number" type="text">
