--- a/templates/guest_detail.html
+++ b/templates/guest_detail.html
@@ -15,39 +15,39 @@
         <li class="list_group left">访客信息</li>
         <li class="list_group right">
             <span class="pull_left">身份证</span>
-            <span>123456789</span>
+            <span>{{record.id}}</span>
         </li>
         <li class="list_group right">
             <span class="pull_left">姓名</span>
-            <span>陈奕晓</span>
+            <span>{{record.name}}</span>
         </li>
         <li class="list_group right">
-            <span class="pull_left">类别</span>
-            <span>学生</span>
+            <span class="pull_left">身份</span>
+            <span>{{record.identity}}</span>
         </li>
         <li class="list_group right">
             <span class="pull_left">手机号</span>
-            <span>13771161706</span>
+            <span>{{record.phone}}</span>
         </li>
         <li class="list_group right">
             <span class="pull_left">目的</span>
-            <span>睡觉</span>
+            <span>{{record.purpose}}</span>
         </li>
         <li class="list_group right">
             <span class="pull_left">目标宿舍号</span>
-            <span>402</span>
+            <span>{{record.target_room}}</span>
         </li>
         <li class="list_group right">
             <span class="pull_left">目标公寓</span>
-            <span>1栋</span>
+            <span>{{record.target_apartment}}</span>
         </li>
         <li class="list_group right">
             <span class="pull_left">到达时间</span>
-            <span>5.12</span>
+            <span>{{record.arrive_time}}</span>
         </li>
         <li class="list_group right">
             <span class="pull_left">离开时间</span>
-            <span>5.21</span>
+            <span>{{record.departure_time}}</span>
         </li>
     </ul>
     <!-- 怎么传入我要修改的哪个学生呢？ -->
