--- a/templates/Leave_school_apply.html
+++ b/templates/Leave_school_apply.html
@@ -17,11 +17,11 @@
     <!-- 需要日期吗？ -->
     <div class="form-group">
       <label for="departure_time">预期离开时间:</label>
-      <input required="" name="departure_time" id="departure_time" type="text">
+      <input required="" name="departure_time" id="departure_time" type="date">
     </div>
     <div class="form-group">
       <label for="return_time">预期返回时间:</label>
-      <input required="" name="return_time" id="return_time" type="text">
+      <input required="" name="return_time" id="return_time" type="date">
     </div>
     <div class="form-group">
       <label for="destination">目的地:</label>
