--- a/templates/return_school_apply.html
+++ b/templates/return_school_apply.html
@@ -17,7 +17,7 @@
     <!-- 需要日期吗？ -->
     <div class="form-group">
       <label for="return_time">预期返回时间:</label>
-      <input required="" name="return_time" id="return_time" type="text">
+      <input required="" name="return_time" id="return_time" type="date">
     </div>
     <div class="form-group">
       <label for="description">返校理由(不多于50字):</label>
