--- a/templates/return_school_detail.html
+++ b/templates/return_school_detail.html
@@ -12,7 +12,7 @@
 {% block body%}
 <div class="data_block">
     <ul class="list_group">
-        <li class="center">离校申报</li>
+        <li class="center">返校申报</li>
         <li class="list_group right">
             <span class="pull_left">申请编号</span>
             <span>{{record.id}}</span>
