--- a/templates/guest_register.html
+++ b/templates/guest_register.html
@@ -13,7 +13,7 @@
   <div class="card-header">
     <div class="log">登记访客</div>
   </div>
-  <form action="#" method="post">
+  <form action="/guest_register" method="post">
     <div class="form-group">
       <label for="ID_card">身份证:</label>
       <input required="" name="ID_card" id="ID_card" type="text">
@@ -35,8 +35,16 @@
       <input required="" name="purpose" id="purpose" type="text">
     </div>
     <div class="form-group">
+      <label for="target_apartment">目的公寓号:</label>
+      <input required="" name="target_apartment" id="target_apartment" type="text">
+    </div>
+    <div class="form-group">
       <label for="target_room">目的宿舍号:</label>
       <input required="" name="target_room" id="target_room" type="text">
+    </div>
+    <div class="form-group">
+          <label for="departure_time">离开时间:</label>
+          <input required="" name="departure_time" id="departure_time" type="date">
     </div>
     <div class="form-group">
       <input value="提交" type="submit">
