--- a/templates/room_change.html
+++ b/templates/room_change.html
@@ -14,10 +14,10 @@
   <div class="card-header">
     <div class="log">修改宿舍信息</div>
   </div>
-  <form action="#" method="post">
+  <form action="/room_change/{{room_id}}" method="post">
     <div class="form-group">
       <label for="housemaster">社长:</label>
-      <input value="" required="" name="housemaster" id="housemaster" type="text">
+      <input value="{{room_record.president}}" required="" name="housemaster" id="housemaster" type="text">
     </div>
 
     <div class="form-group">
